# GraphBased3DEngine

./: README.md
automaters/: asteroides.py  jupiter.py  moon.py  neptune.py  saturn.py  uranus.py
code/: CMakeLists.txt
engine/: main.cpp
generator/: main.cpp
src/: CMakeLists.txt
src/engine/: CMakeLists.txt  Grupo.cpp  Grupo.h  XMLDocReader.cpp  XMLDocReader.h  main.cpp
src/engine/Transformacao/: Escala.cpp  Escala.h  Rotacao.cpp  Rotacao.h  RotacaoEstatica.cpp  RotacaoEstatica.h  RotacaoTemporizada.cpp  RotacaoTemporizada.h  Transformacao.h  Translacao.cpp  Translacao.h  TranslacaoEstatica.cpp  TranslacaoEstatica.h  TranslacaoTemporizada.cpp  TranslacaoTemporizada.h
src/engine/parserXML/: Camara.cpp  Camara.h  Cor.cpp  Cor.h  Figura.cpp  Figura.h  Grupo.cpp  Grupo.h  Modelo.cpp  Modelo.h  XMLDocReader.cpp  XMLDocReader.h
src/engine/parserXML/Luz/: Luz.h  LuzDirecional.cpp  LuzDirecional.h  LuzPosicional.cpp  LuzPosicional.h  LuzSpot.cpp  LuzSpot.h
src/engine/parserXML/Transformacao/: Escala.cpp  Escala.h  RotacaoEstatica.cpp  RotacaoEstatica.h  RotacaoTemporizada.cpp  RotacaoTemporizada.h  Transformacao.h  TranslacaoEstatica.cpp  TranslacaoEstatica.h  TranslacaoTemporizada.cpp  TranslacaoTemporizada.h
src/generator/: CMakeLists.txt  main.cpp
src/models/: Cilindro.cpp  Cilindro.h  Cone.cpp  Cone.h  Cubo.cpp  Cubo.h  Esfera.cpp  Esfera.h  Modelo.cpp  Modelo.h  Patch.cpp  Patch.h  Plano.cpp  Plano.h  SuperficieBezier.cpp  SuperficieBezier.h  Tesselation.cpp  Tesselation.h  Torus.cpp  Torus.h
tests/: estadio.xml  solar_system.xml  staryu.xml  test_1_1.xml  test_1_5.xml  test_3_1.xml  test_4_7.xml
tmp/: CMakeLists.txt  Cubo.cpp  Esfera.cpp  Plano.cpp  main.cpp
tmp/code/: Cubo.cpp  Esfera.cpp  Modelo.cpp  Plano.cpp  Vertice.cpp  main.cpp
